RESOLVED FIXED33958
[Android] JavaField and JavaArray use JSC-specific types
https://bugs.webkit.org/show_bug.cgi?id=33958
Summary [Android] JavaField and JavaArray use JSC-specific types
Steve Block
Reported 2010-01-21 09:08:14 PST
WebCore/bridge/jni/JNIBridge.[cpp|h] provides a number of classes. Of these, JavaField and JavaArray use JSC-specific types. This causes problems on Android, where we can build with JSC or V8. These JSC-specific classes should be moved out of JNIBridge.[cpp|h] to allow the file to be used with both JSC and V8.
Attachments
Patch (56.05 KB, patch)
2010-01-22 06:22 PST, Steve Block
no flags
Steve Block
Comment 1 2010-01-22 06:22:27 PST
WebKit Review Bot
Comment 2 2010-01-22 06:25:58 PST
Attachment 47197 [details] did not pass style-queue: Failed to run "WebKitTools/Scripts/check-webkit-style" exit_code: 1 Traceback (most recent call last): File "WebKitTools/Scripts/check-webkit-style", line 94, in <module> main() File "WebKitTools/Scripts/check-webkit-style", line 87, in main style_checker.check_patch(patch) File "/mnt/git/webkit-style-queue/WebKitTools/Scripts/webkitpy/style/checker.py", line 915, in check_patch self.check_file(file_path, handle_style_error=error_for_patch) File "/mnt/git/webkit-style-queue/WebKitTools/Scripts/webkitpy/style/checker.py", line 883, in check_file process_file(processor, file_path, handle_style_error) File "/mnt/git/webkit-style-queue/WebKitTools/Scripts/webkitpy/style/checker.py", line 838, in _process_file processor.process(lines) AttributeError: 'NoneType' object has no attribute 'process' If any of these errors are false positives, please file a bug against check-webkit-style.
Adam Barth
Comment 3 2010-01-26 01:46:14 PST
Comment on attachment 47197 [details] Patch Ok. I didn't prove to myself that this was just moving code, but I believe you when you say it is. You even get out of fixing the style nits because the style bot was down when you uploaded your patch. :)
Steve Block
Comment 4 2010-01-26 01:53:53 PST
Comment on attachment 47197 [details] Patch I've checked that the style is good. This patch only moves code from JNIBridge.[cpp|h] and the style in those files was fixed in Bug 33914
WebKit Commit Bot
Comment 5 2010-01-26 04:05:58 PST
Comment on attachment 47197 [details] Patch Clearing flags on attachment: 47197 Committed r53849: <http://trac.webkit.org/changeset/53849>
WebKit Commit Bot
Comment 6 2010-01-26 04:06:03 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.