WebCore/Android.jscbindings.mk
@@ -186,6 +186,7 @@ LOCAL_SRC_FILES += \
 	bridge/c/c_utility.cpp \
 	bridge/jni/JNIBridge.cpp \
 	bridge/jni/JNIUtility.cpp \
+	bridge/jni/jsc/JNIBridgeJSC.cpp \
 	bridge/jni/jsc/JNIUtilityPrivate.cpp \
 	bridge/jni/jsc/JavaClassJSC.cpp \
 	bridge/jni/jsc/JavaInstanceJSC.cpp \
